# lyra-esp32

./: .gitignore  CMakeLists.txt  Makefile  errors.txt  partitions.csv  partitions_example.csv  sdkconfig.defaults
components/epaper/: CMakeLists.txt  Calibri24x32GR.c  EPD.c  EPD.h  EPDspi.c  EPDspi.h  Grotesk16x32.c  GroteskBold16x32.c  Inconsola.c  Ubuntubold.c  arial_bold.c  arial_normal.c  arial_round.c  hallfetica_normal.c
components/mkspiffs/: CMakeLists.txt  Makefile.projbuild
components/spidriver/: CMakeLists.txt  spi_master_lobo.c  spi_master_lobo.h
components/spiffs/: CMakeLists.txt
components/spiffs_image/: CMakeLists.txt  image2.img
components/spiffs_image/image/fonts/: arial_bold.fon
components/spiffs_image/image/images/: icons.psd
components/wifi_manager/: CMakeLists.txt  Kconfig.projbuild  component.mk  index.html  main.c  wifi_manager.c  wifi_manager.h
main/: CMakeLists.txt  Kconfig.projbuild  battery.h  display.h  display_print.h  ePaper.h  ePaper_old.lala  json.h  json_read.h  main.c  main.h  nvs.c  struct.h
